# pwt-back

./: Dockerfile  db.sqlite3  docker-compose.yml  export.py  export_img.py  manage.py  pyproject.toml  test.csv  test.py  wc.csv
category/: admin.py  models.py  serializers.py  urls.py  views.py
category/migrations/: 0001_initial.py  0002_alter_category_img.py  0003_alter_use_img.py  0004_alter_category_options_alter_use_options.py  0005_subcategory.py  0006_subcategory_category.py  0007_alter_subcategory_category.py  0008_alter_category_description.py  0009_alter_use_description.py  0010_alter_category_description.py  0011_alter_subcategory_description.py  0012_alter_category_description_and_more.py  0013_alter_subcategory_slug.py  0014_alter_subcategory_id_alter_subcategory_slug.py  0015_alter_subcategory_id_alter_subcategory_slug.py  0016_alter_subcategory_id_alter_subcategory_slug.py  0017_alter_subcategory_id_alter_subcategory_slug.py  0018_alter_category_id_alter_category_slug.py  0019_alter_category_id_alter_category_slug.py  0020_alter_category_id_alter_category_slug.py  0021_alter_category_id_alter_category_slug.py  0022_alter_subcategory_category.py  0023_alter_subcategory_category.py  0024_alter_subcategory_category.py  0025_use_short_name.py  0026_ssubcategory.py  0027_alter_ssubcategory_options_and_more.py  0028_alter_subcategory_category_twosubcategory_and_more.py  (+5 more)
order/: admin.py  models.py  serializers.py  urls.py  views.py
product/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
pwt/: asgi.py  settings.py  urls.py  wsgi.py
(+40 files in other folders)
