[tool.poetry]
name = "pwt"
version = "0.1.0"
description = ""
authors = ["Still <likiblack@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
djangorestframework = "^3.14.0"
django-filter = "^24.1"
django-cors-headers = "^4.3.1"
pillow = "^10.2.0"
django-ckeditor = "^6.7.1"
easy-thumbnails = "^2.8.5"
djangorestframework-simplejwt = "^5.3.1"
django-allauth = "^0.61.1"
dj-rest-auth = "^5.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
